--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <title> Contacto </title>
 </head>
 
@@ -41,16 +43,14 @@
             <fieldset>
                 <legend>¿Cómo le gustaría que lo contactemos?</legend>
 
-                <label for="radio-email"><input type="radio" name="contacto" value="Email"
-                        id="radio-email">Email</label>
+                <label for="radio-email"><input type="radio" name="contacto" value="Email" id="radio-email">Email</label>
 
 
-                <label for="radio-teléfono"><input type="radio" name="contacto" value="Teléfono"
-                        id="radio-teléfono">Teléfono</label>
+                <label for="radio-teléfono"><input type="radio" name="contacto" value="Teléfono" id="radio-teléfono">Teléfono</label>
 
 
                 <label for="radio-whatsaap"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp"
-                        checked>Whatsaap</label>
+                        checked> Whatsaap</label>
 
             </fieldset>
             <fieldset>
@@ -61,10 +61,9 @@
                     <option>Noche</option>
                 </select>
             </fieldset>
-            <label class="checkbox"><input type="checkbox" checked>Le gustaría recibir novedades de la Barbería Martin
-                ?</label>
+            <label class="checkbox"><input type="checkbox" checked>Le gustaría recibir novedades de la Barbería Martin ?</label>
 
-            <input type="submit" value="Enviar Formulario" class="enviar">
+            <input type="submit" value="Enviar Formulario" class="enviar"  onclick="btnEnviar()" >
 
         </form>
         <table>
@@ -94,7 +93,7 @@
         </table>
 
 
-
+        <script src="contacto.js"></script>
 
 
     </main>
@@ -107,4 +106,5 @@
         <p class="Copyrigth"> &copy; Copyrigth Barbería Martin - 2023 </p>
 
     </footer>
+    
 </body>
