carga archivos js

--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="sweetalert2.min.css">
+
     <title> Contacto </title>
 </head>
 
@@ -43,10 +43,12 @@
             <fieldset>
                 <legend>¿Cómo le gustaría que lo contactemos?</legend>
 
-                <label for="radio-email"><input type="radio" name="contacto" value="Email" id="radio-email">Email</label>
+                <label for="radio-email"><input type="radio" name="contacto" value="Email"
+                        id="radio-email">Email</label>
 
 
-                <label for="radio-teléfono"><input type="radio" name="contacto" value="Teléfono" id="radio-teléfono">Teléfono</label>
+                <label for="radio-teléfono"><input type="radio" name="contacto" value="Teléfono"
+                        id="radio-teléfono">Teléfono</label>
 
 
                 <label for="radio-whatsaap"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp"
@@ -61,9 +63,10 @@
                     <option>Noche</option>
                 </select>
             </fieldset>
-            <label class="checkbox"><input type="checkbox" checked>Le gustaría recibir novedades de la Barbería Martin ?</label>
+            <label class="checkbox"><input type="checkbox" checked>Le gustaría recibir novedades de la Barbería Martin
+                ?</label>
 
-            <input type="submit" value="Enviar Formulario" class="enviar"  onclick="btnEnviar()" >
+            <input type="submit" value="Enviar Formulario" class="enviar" onclick="aplicar()">
 
         </form>
         <table>
@@ -106,5 +109,5 @@
         <p class="Copyrigth"> &copy; Copyrigth Barbería Martin - 2023 </p>
 
     </footer>
-    
+
 </body>
