--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         2sPatio%20Olmos%20Shopping!5e0!3m2!1ses!2sar!4v1696716905300!5m2!1ses!2sar" width="900"
                     height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade" width="100%" height="300" style="border:0;"
-                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa-contenido"></iframe>
 
             </div>
         </section>
