--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title> Productos-Babería Martin </title>
 </head>
 
@@ -27,7 +28,7 @@
     </header>
     <main>
 
-        <ul class="productos">
+        <ul class="productos" onclick="promo()">
             <li>
                 <h2>Cabello</h2>
                 <img src="imagenes/cabello.jpg">
@@ -48,7 +49,7 @@
                 <p class="producto-precio"> $4500,00 </p>
             </li>
         </ul>
-
+        <script src="productos.js"></script>
     </main>
     <footer>
 
@@ -58,13 +59,6 @@
     </footer>
 
 </body>
-
-
-
-
-
-
-
 
 
 
